--- a/pages/consulting-page.html
+++ b/pages/consulting-page.html
@@ -11,45 +11,41 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
 </head>
 <body>
-<div class="hero">
-    <div>.
+    <div class="space">
     </div>
-    <div id="nav-bar" >
-        <a href="/index.html"><img src="/assets/images/Bio_Growth_logo-removebg-preview copy 2.png" alt=""></a>
-        <h5>Bio-Growth</h5>
-        <ul>
-            <li><a href="./product.html">Products</a></li>
-            <li><a href="./consulting-page.html">Consulting</a></li>
-            <li><a href="./blog-page.html">Blog</a></li>
-            <li><a href="./about-us.html">Company</a></li>    
+    <div class="navbar">
+        <div class="logo"><a href="/index.html"><img src="/images/Bio_Growth_logo-removebg-preview.png" alt=""></a><p>Bio Growth</p></div>
+        <ul class="links">
+            <li>
+                <a href="./product.html">products</a>
+                <a href="./consulting-page.html">consulting</a>
+                <a href="./blog-page.html">Blog</a>
+                <a href="./about-us.html">Company</a>
+            </li>
         </ul>
-       <button id="btn-2" onclick="login()">Log in</button>
-       <button id="btn-1" onclick="signup()">Sign Up</button>
+        <a href="/pages/login.html" class="action_btn-1">Login</a>
+        <a href="/pages/signup.html" class="action_btn">Sign up</a>
+        <div class="toggle_btn"><i class="fa-solid fa-bars icon"></i></div>
     </div>
-    <!-- <div id="nav-bar" >
-        <a href="../index.html"><img src="../assets/images/Bio_Growth_logo-removebg-preview.png" alt=""></a>
-        <h5>Bio-Growth</h5>
-        <ul>
-            <li><a href="./product.html">Products</a></li>
-            <li><a href="./consulting-page.html">Consulting</a></li>
-            <li><a href="./blog-page.html">Blog</a></li>
-            <li><a href="./about-us.html">Company</a></li>    
+    <div class="dropdown_menu open"> 
+        <ul class="links">
+            <li>
+                <a href="/pages/product.html">products</a>
+                <a href="/pages/consulting-page.html">consulting</a>
+                <a href="/pages/blog-page.html">Blog</a>
+                <a href="/pages/about-us.html">Company</a>
+            </li>
         </ul>
-        <div class="user-info">
-            <p>cart</p>
-            <i>7</i>
-            <img src="../assets/images/3c0543911ffeb847e003cd407bbfecca.jpeg" alt="">
-        </div> -->
+        <a href="/pages/login.html" class="action_btn-1">Login</a>
+        <a href="/pages/signup.html" class="action_btn">Sign up</a>
     </div>
-</div>
-
 <div class="consulting-page">
     <div class="about-us">
         <div id="Cultivating-innovation">
             Expert Agricultural <br> <span>, Consulting services</span>
         </div>
         <div id="At-Biotech">
-            <h3>At Biotech AgroTech, we're pioneers in agricultural innovation, dedicated <br>to revolutionizing farming with cutting-edge solutions. From precision <br>farming tools to genetically optimized crops, we empower farmers <br> worldwide for a greener, more prosperous future.
+            <h3>At Biotech AgroTech, we're pioneers in agricultural innovation, dedicated <br> to revolutionizing farming with cutting-edge solutions. From precision <br>farming tools to genetically optimized crops, we empower farmers <br> worldwide for a greener, more prosperous future.
             </h3>
             <button>Book a session </button>
         </div>
@@ -59,22 +55,22 @@
         <h3>Expert Consultation for <br>
             Agricultural Excellence
         </h3>
-        <h5>At Biotech AgroTech, our personalized consultations provide tailored <br> guidance to optimize your farm's operations and maximize <br> productivity. Benefit from industry expertise, strategic planning, <br> problem-solving, and long-term support.</h5>
+        <h5>At Biotech AgroTech, our personalized consultations provide tailored guidance to optimize your farm's operations and maximize productivity. Benefit from industry expertise, strategic planning, problem-solving, and long-term support.</h5>
         <div class="consulting-flex">
             <div class="flex-1">
                 <img src="../assets/images/consulting-1.jpeg" alt="">
                 <h3>Personalized <br> Consultancy</h3>
-                <h5>Receive tailored advice and <br> recommendations based on your farm's <br> individual requirements and challenges.</h5>
+                <h5>Receive tailored advice and recommendations based on your farm's individual requirements and challenges.</h5>
             </div>
             <div class="flex-1">
                 <img src="../assets/images/consulting-2.jpeg" alt="">
                 <h3>Industry <br> Expertise</h3>
-                <h5>Tap into the knowledge and experience of <br> our agricultural specialist who understand <br> the complexities of modern farming</h5>
+                <h5>Tap into the knowledge and experience of our agricultural specialist who understand the complexities of modern farming</h5>
             </div>
             <div class="flex-1">
                 <img src="../assets/images/consulting-3.jpeg" alt="">
                 <h3>strategic  <br>Planning</h3>
-                <h5>Develop customized strategies and action <br> plans to optimize crop production, livestock <br> managment, and overall farm efficiency </h5>
+                <h5>Develop customized strategies and action plans to optimize crop production, livestock managment, and overall farm efficiency </h5>
             </div>
         </div>
         <!-- <div class="consulting-buttons">
@@ -87,22 +83,22 @@
         <div id="why-choose-bio-growth">
             <div class="why-1">
                 <h1>Innovation</h1>
-                <h2>We leverage the latest research and <br> technology to develop cutting-edge <br> agricultural solutions.</h2>
+                <h2>We leverage the latest research and technology to develop cutting-edge agricultural solutions.</h2>
             </div>
             <div class="why-1">
                 <h1>Expertise</h1>
-                <h2>Our team of specialists provides <br> knowledgeable and practical advice <br> tailored to your specific needs.</h2>
+                <h2>Our team of specialists provides knowledgeable and practical advice tailored to your specific needs.</h2>
             </div>
             <div class="why-1">
                 <h1>support</h1>
-                <h2> Our ongoing support ensures that you get <br> the most out of our products and services, <br> with continued assistance as needed.</h2>
+                <h2> Our ongoing support ensures that you get the most out of our products and services, with continued assistance as needed.</h2>
             </div>
         </div>
     </div>
     <div class="let-chat">
         <button id="our-products">Contact Us</button>
         <h1>Let's chat</h1> <br>
-        <h5>Send an email or book a pressure-free discovery <br> session to see how we can help.</h5>
+        <h5>Send an email or book a pressure-free discovery session to see how we can help.</h5>
         <div class="consulting-buttons">
             <button >Contact Us <span class="arrow">&#10140;</span></button>
             <button class="learn-btn" >Book a Session</button>
@@ -163,4 +159,4 @@
         Copyright © 2024 Bio-growth Agrotech. All rights reserved.
     </div> 
 </div>
-<script src="/js/product.js"></script>
+<script src="/index.js"></script>
