--- a/pages/blog-page.html
+++ b/pages/blog-page.html
@@ -11,41 +11,38 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
 </head>
 <body>
-<div class="hero">
-    <div>.
+    <div class="space">
     </div>
-    <div id="nav-bar" >
-        <a href="/index.html"><img src="/assets/images/Bio_Growth_logo-removebg-preview copy 2.png" alt=""></a>
-        <h5>Bio-Growth</h5>
-        <ul>
-            <li><a href="./product.html">Products</a></li>
-            <li><a href="./consulting-page.html">Consulting</a></li>
-            <li><a href="./blog-page.html">Blog</a></li>
-            <li><a href="./about-us.html">Company</a></li>    
+    <div class="navbar">
+        <div class="logo"><a href="/index.html"><img src="/images/Bio_Growth_logo-removebg-preview.png" alt=""></a><p>Bio Growth</p></div>
+        <ul class="links">
+            <li>
+                <a href="./product.html">products</a>
+                <a href="./consulting-page.html">consulting</a>
+                <a href="./blog-page.html">Blog</a>
+                <a href="./about-us.html">Company</a>
+            </li>
         </ul>
-       <button id="btn-2" onclick="login()">Log in</button>
-       <button id="btn-1" onclick="signup()">Sign Up</button>
+        <a href="/pages/login.html" class="action_btn-1">Login</a>
+        <a href="/pages/signup.html" class="action_btn">Sign up</a>
+        <div class="toggle_btn"><i class="fa-solid fa-bars icon"></i></div>
     </div>
-    <!-- <div id="nav-bar" >
-        <a href="/index.html"><img src="../assets/images/Bio_Growth_logo-removebg-preview.png" alt=""></a>
-        <h5>Bio-Growth</h5>
-        <ul>
-            <li><a href="./product.html">Products</a></li>
-            <li><a href="./consulting-page.html">Consulting</a></li>
-            <li><a href="./blog-page.html">Blog</a></li>
-            <li><a href="./about-us.html">Company</a></li>     
+    <div class="dropdown_menu open"> 
+        <ul class="links">
+            <li>
+                <a href="/pages/product.html">products</a>
+                <a href="/pages/consulting-page.html">consulting</a>
+                <a href="/pages/blog-page.html">Blog</a>
+                <a href="/pages/about-us.html">Company</a>
+            </li>
         </ul>
-        <div class="user-info">
-            <p>cart</p>
-            <i>7</i>
-            <img src="../assets/images/3c0543911ffeb847e003cd407bbfecca.jpeg" alt="">
-        </div> -->
+        <a href="/pages/login.html" class="action_btn-1">Login</a>
+        <a href="/pages/signup.html" class="action_btn">Sign up</a>
     </div>
-</div>
 
 <div class="my-blog">
     <div>
-        <h1>Bio Growth Blog: Cultivating Knowledge for Greener <br>
+        <h1>Bio Growth Blog: Cultivating Knowledge for Greener
              Farmland and Healthy Livestock   
         </h1>
     </div>
@@ -53,19 +50,19 @@
         <div class="blog-1">
             <img src="../assets/images/blog-1.jpeg"" alt="">
             <h1>Unlocking Precision <br> Agriculture: A Farmer's Guide</h1>
-            <h5>Discover how innovative technologies like <br> GPS-guided equipment and remote sensing <br> are revolutionizing farming.</h5>
+            <h5>Discover how innovative technologies like GPS guided equipment and remote sensing are revolutionizing farming.</h5>
             <a href="/pages/blog1.html">Read Blog</a>
         </div>
         <div class="blog-1">
             <img src="../assets/images/blog-2.jpeg" alt="">
             <h1>Soil Health: Key Practices for <br> Sustainable Farming</h1>
-            <h5>Learn about soil testing, nutrient <br> management, and cover cropping for <br> healthier soils and better yields</h5>
+            <h5>Learn about soil testing, nutrient management, and cover cropping for healthier soils and better yields</h5>
             <a href="/pages/blog2.html">Read Blog</a>
         </div>
         <div class="blog-1">
             <img src="../assets/images/blog-3.jpeg" alt="">
             <h1>Integrated Pest Management: <br> A Holistic Approach</h1>
-            <h5>Explore strategies like biological controls and <br> targeted pesticide applications for effective <br> pest management.</h5>
+            <h5>Explore strategies like biological controls and targeted pesticide applications for effective pest management.</h5>
             <a href="/pages/blog3.html">Read Blog</a>
         </div>
     </div>
@@ -73,19 +70,19 @@
         <div class="blog-1">
             <img src="../assets/images/blog 4.jpeg"alt="">
             <h1>Building Diary Production <br> with Premium Feed </h1>
-            <h5>Increase your dairy yield with Bio Growth's <br> nutrient-rich feed designed for dairy cattle. <br> Our formula enhances milk production and <br> supports overall cow health, ensuring high- <br>quality dairy output.</h5>
+            <h5>Increase your dairy yield with Bio Growth's nutrient-rich feed designed for dairy cattle. Our formula enhances milk production and supports overall cow health, ensuring high-quality dairy output.</h5>
             <a href="/pages/blog4.html">Read Blog</a>
         </div>
         <div class="blog-1">
             <img src="../assets/images/blog5.jpeg" alt="">
             <h1>Enhancing Poultry Health and Growth</h1>
-            <h5>Ensure your poultry flock thrives with Bio Growth's <br> balanced feed. Our poultry feed is <br> optimized for growth, health, and egg <br>production, providing all essential nutrients <br> for robust birds.</h5>
+            <h5>Ensure your poultry flock thrives with Bio Growth's balanced feed. Our poultry feed is optimized for growth, health, and egg production, providing all essential nutrients for robust birds.</h5>
             <a href="/pages/blog5.html">Read Blog</a>
         </div>
         <div class="blog-1">
             <img src="../assets/images/blog 6.jpeg" alt="">
-            <h1>Optimal Nutrition for Beef <br> Cattle</h1>
-            <h5>Promote healthy growth and muscle <br> development in your beef cattle with Bio <br> Growth's superior feed. Our products ensure <br> your herd receives the right balance of <br> nutrients for optimal health and weight gain.</h5>
+            <h1>Optimal Nutrition for Beef Cattle</h1>
+            <h5>Promote healthy growth and muscle development in your beef cattle with Bio Growth's superior feed. Our products ensure your herd receives the right balance of nutrients for optimal health and weight gain.</h5>
             <a href="/pages/blog6.html">Read Blog</a>
         </div>
     </div>
